[package]
name = "ashina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Git deps
dioxus = "*"
dioxus-web = "*"

reqwest = "0.11.22"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["HtmlVideoElement", "Url", "MediaSource", "SourceBuffer", "TimeRanges"] }
futures = "0.3.29"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
bytes = "1.5.0"
dash-mpd = { git = "https://github.com/vgarleanu/dash-mpd-rs", default-features = false }
url = "2.5.0"
flume = "0.11.0"
js-sys = "0.3.66"
tokio = { version = "1.34.0", features = ["rt", "time", "macros"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
thiserror = "1.0.50"
displaydoc = "0.2.4"
gloo-utils = "0.2.0"
serde = { version = "1.0.193", features = ["derive"] }
mp4 = { version = "0.14.0" }
byteorder = "1.5.0"
wasm-bindgen-futures = "0.4.39"
regex = "1.10.2"
lazy_static = "1.4.0"
